<resources>
    <string name="app_name">رفق</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="slider_text">يمكنك ضبط مواعيد دوائك وتنظيم يومك سنساعدك بكل حب لتحصل على ما تريد</string>
    <string name="txt_sing_in">تسجيل دخول</string>
    <string name="txt_refg">رفق</string>
    <string name="txt_welcom">أهلا بك</string>
    <string name="txt_name">الاسم</string>
    <string name="txt_password">كلمة السر</string>
    <string name="txt_forgert_password">نسيت كلمة السر؟</string>
    <string name="txt_id_number">رقم الهوية</string>
    <string name="txt_creat_account">انشاء حساب</string>
    <string name="txt_sign_up_by">التسجيل بواسطة</string>
    <string name="did_you_foreget_password">هل نسيت كلمة السر؟</string>
    <string name="enter_phone_number">الرجاء إدخال رقم هاتفك وسنرسل لك كود</string>
    <string name="txt_phone_number">رقم الهاتف</string>
    <string name="txt_next">التالي</string>
    <string name="txt_validation">تحقق</string>
    <string name="send_code_agine">أرسل الكود مرة أخرى</string>
    <string name="reset_password">إعادة تعيين كلمة السر</string>
    <string name="txt_new_password">كلمة السر الجديدة</string>
    <string name="txt_confirm_password">تأكيد كلمة السر</string>
    <string name="txt_back_to_sign_in">العودة لتسجيل الدخول</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_welcom_2">آهلا وسهلاً</string>

    <string name="tab_text_1">طلبات قيد التنفيذ </string>
    <string name="tab_text_order_1">الحالية </string>
    <string name="tab_text_order_2">القديمة </string>
    <string name="tab_text_order_3">المعلقة </string>
    <string name="tab_text_2">طلبات مقترحة </string>
    <string name="txt_email">البريد الالكتروني</string>
    <string name="older">كبير السن</string>
    <string name="doctor">دكتور</string>
    <string name="select_user">التسجيل كـ :</string>
    <string name="create_new_account">انشاء حساب جديد</string>
    <string name="txt_events">الفعاليات</string>
    <string name="txt_service">الخدمات</string>
    <string name="home_service">الرعاية المنزلية</string>
    <string name="city">المدينة</string>
    <string name="service">الخدمة</string>
    <string name="start_time">موعد البدأ</string>
    <string name="city6">رفح</string>
    <string name="city5">خانيونس</string>
    <string name="city4">الوسطى</string>
    <string name="city3">غزة</string>
    <string name="city2">بيت لاهيا</string>
    <string name="city1">جباليا</string>
    <string name="order_added">تم اضافة طلبك بنجاح</string>
    <string name="txt_dialog">يمكنك متابعة الطلب الخاص بك عن طريق شاشة الحجوزات المعلقة</string>
    <string name="type_a_message">type a message</string>
    <string name="compelet_sifn_proccess">اكمال عملية التسجيل</string>
</resources>