<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    tools:context=".View.PasswordResetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_46sdp"
        android:textSize="@dimen/_15ssp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/txt_new_password"
        android:textSize="@dimen/_18ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="4dp"
        android:background="#F5F5F5"
        android:padding="@dimen/_8sdp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/txt_confirm_password"
        android:textSize="@dimen/_18ssp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="4dp"
        android:background="#F5F5F5"
        android:padding="@dimen/_8sdp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/mainColor"
        android:padding="@dimen/_8sdp"
        android:text="@string/txt_back_to_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />
</LinearLayout>