<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:orientation="vertical"
    tools:context=".View.ForgetPasswordActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back_arrow"
        android:layout_gravity="end"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/did_you_foreget_password"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_16sdp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_15ssp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/txt_phone_number"
        android:textSize="@dimen/_18ssp" />

    <EditText
        android:id="@+id/edtResetEmail"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="4dp"
        android:background="#F5F5F5"
        android:padding="@dimen/_8sdp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"

        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/mainColor"
        android:padding="4dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/txt_next"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />
</LinearLayout>